# commitment_os

./: .env.example  .gitignore  HF_README.md  README.md  __init__.py  constants.py  inference.py  models.py  openenv.yaml  pyproject.toml
artifacts/: training_metrics.json  training_summary.csv
artifacts/evals/: README.md  baseline_eval.json  case_study_hard_011.md  comparison.csv  eval_protocol.json  summary.json  trained_eval.json
artifacts/evals_llm/: README.md
evaluation/: CommitmentOS_Checkpoint_Eval_Colab.ipynb  evaluate_improvement.py  evaluate_llm_checkpoints.py  plot_improvement.py  plot_llm_checkpoints.py
scripts/: sync_hf_space.sh
server/: __init__.py  app.py  domain.py  environment.py  graders.py  mcp.py  tasks.py  world.py
tests/: test_environment.py
training/: CommitmentOS_Training.ipynb  env_factory.py  train_grpo.py
